# geometrodynamics

./: .gitignore  README.md  pyproject.toml  qcd_topology_solver_v30.py  s3_spin2_closure_toy_solver_v20.py  s3_spin2_closure_toy_solver_v22 (1).py
archive/: README.legacy.md  geometrodynamics_v39.py
docs/: THESIS.md  absolute_coupling_capstone.md  adiabatic_exchange_holonomy_research_plan.md  alpha_G_ledger_classification_research_plan.md  alpha_normalization_ledger_research_plan.md  alpha_protected_boundary_invariant_research_plan.md  antipodal_focusing_threshold_research_plan.md  antipodal_horizon_exchange_kernel_research_plan.md  antipodal_kernel_one_loop_self_energy_research_plan.md  antipodal_matter_interaction_synthesis_research_plan.md  antipodal_vs_absorbing_qnm_research_plan.md  aps_lepton_partition_index_research_plan.md  aps_quark_partition_index_research_plan.md  b_minus_l_tension_ratio_research_plan.md  bam_coulomb_two_throat_hf_research_plan.md  bam_effective_action_scaffold_research_plan.md  bam_exchange_kernel_research_plan.md  bam_factorized_sector_sum_research_plan.md  bam_nonorientable_experimental_note.md  bam_scaffold_status.md  bam_sector_phase_ledger_research_plan.md  baryonic_exotics_classification_research_plan.md  berger_dirac_analytic_ladder.md  berger_r_unification_audit_research_plan.md  beta_lepton_derivation_research_plan.md  bhabha_moller_interference_research_plan.md  born_rule_equivariance.md  boundary_compliance_bulk_geometry_research_plan.md  boundary_stress_chi_n_research_plan.md  brane_tension_tuning_research_plan.md  (+191 more)
(+944 files in other folders)
