[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geometrodynamics"
version = "0.43.0"
description = "Research framework implementing and testing Wheeler's geometrodynamic program"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    {name = "David M."},
]
keywords = [
    "geometrodynamics", "wheeler", "hopf-fibration", "wormhole",
    "tangherlini", "qcd", "confinement", "topology", "black-hole",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.1",
]
notebooks = [
    "jupyter>=1.0",
    "ipywidgets>=8.0",
]

[tool.setuptools.packages.find]
include = ["geometrodynamics*"]
exclude = ["tests*", "notebooks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
